--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:hint="Take your pill"
         android:inputType="text"/>
-    
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"/>
         </TableRow>
     </TableLayout>
-    
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -145,12 +145,19 @@
         android:textSize="20sp"
         android:textColor="@color/colorAccent"
         />
-    
+
     <Button
+        android:id="@+id/btn_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Set time"
-        android:background="?android:attr/selectableItemBackground"
-        />
+        android:textAllCaps="false"
+        android:textColor="@color/Gray"
+        android:textSize="16sp" />
+    
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
